[gd_scene load_steps=3 format=3 uid="uid://byeivh78bedu0"]

[ext_resource type="PackedScene" uid="uid://dwmmrcdl0y5n5" path="res://scene/ui/base_model/panel_model.tscn" id="1_3ddy1"]
[ext_resource type="Script" uid="uid://b5hcudv6gyam6" path="res://scene/ui/default_model/panel/quest_group_panel/add_quest_group_panel.gd" id="2_7ygrc"]

[node name="AddQuestGroupPanel" instance=ExtResource("1_3ddy1")]
custom_minimum_size = Vector2(540, 0)
offset_left = -185.0
offset_top = -261.5
offset_right = 185.0
offset_bottom = 261.5
script = ExtResource("2_7ygrc")

[node name="TitleLabel" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]
text = "添加任务组"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="QuestGroupNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "请输入任务组名字"

[node name="QuestGroupDescTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
placeholder_text = "请输入任务组介绍"

[node name="OpenTimeModeButton" type="CheckButton" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "是否打开限时模式"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="YearSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
min_value = 2025.0
max_value = 99999.0
value = 2025.0
alignment = 1

[node name="MonthSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1

[node name="DayBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 31.0
value = 1.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="4"]
layout_mode = 2

[node name="HourBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
unique_name_in_owner = true
layout_mode = 2
max_value = 23.0
alignment = 1

[node name="MinuteBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
max_value = 59.0
alignment = 1

[node name="SecondBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 59.0
alignment = 1

[node name="CreateQuestGroupButton" type="Button" parent="MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "创建"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/QuestGroupNameLineEdit" to="." method="_on_quest_group_name_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreateQuestGroupButton" to="." method="_on_create_quest_group_button_pressed"]
